Change db connect url

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 TELEGRAM_TOKEN=
 TELEGRAM_CHAT_ID=
 FILTER_QUERY=react
-MONGODB_URI=
+#MONGODB_URI=
+DB_URI=
 UPWORK_CONSUMER_KEY=
 UPWORK_CONSUMER_SECRET=
 UPWORK_ACCESS_TOKEN=
